Add stop lifecycle features and get shipment query
