# src/shipment/features/arrive-at-stop/arrive-at-stop.validator.ts
@@ -1,0 +1,9 @@
+import { IsUUID } from "class-validator";
+
+export class ArriveAtStopValidator {
+	@IsUUID()
+	shipmentId: string;
+
+	@IsUUID()
+	stopId: string;
+}
