# src/shipment/features/deliver-at-stop/deliver-at-stop.validator.ts
@@ -1,0 +1,9 @@
+import { IsUUID } from "class-validator";
+
+export class DeliverAtStopValidator {
+	@IsUUID()
+	shipmentId: string;
+
+	@IsUUID()
+	stopId: string;
+}
